--- a/web/index.html
+++ b/web/index.html
@@ -2,18 +2,11 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-<<<<<<< HEAD
     <meta name="viewport" content="width=device-width initial-scale=1.0 user-scalable=no minimum-scale=1.0 maximum-scale=1.0" >
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <meta http-equiv="Access-Control-Allow-Origin" content="*" />
     <link rel="stylesheet" href="./commonCss/reset.css">
     <link rel="stylesheet" href="css/index.css">
-=======
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <link rel="stylesheet" href="./common/reset.css">
-    <link rel="stylesheet" href="main/index.css">
->>>>>>> 893a47ca03336759bce7e412ea5560a65a01563c
     <title>抢票应用</title>
 </head>
 <body>
@@ -26,25 +19,6 @@
         <section>
             <ul class="activities">
                 <li>
-<<<<<<< HEAD
-                    <img src="" alt="" width="100%" height="100%">
-=======
-                    <img src="" alt="">
->>>>>>> 893a47ca03336759bce7e412ea5560a65a01563c
-                    <h3>活动名称</h3>
-                    <p><em></em><span>2018年04月29日 14:00~16:00</span></p>
-                </li>
-                <li>
-<<<<<<< HEAD
-                    <img src="" alt="" width="100%" height="100%">
-=======
-                    <img src="" alt="">
->>>>>>> 893a47ca03336759bce7e412ea5560a65a01563c
-                    <h3>活动名称</h3>
-                    <p><em></em><span>2018年04月29日 14:00~16:00</span></p>
-                </li>
-                <li>
-<<<<<<< HEAD
                     <img src="" alt="" width="100%" height="100%">
                     <h3>活动名称</h3>
                     <p><em></em><span>2018年04月29日 14:00~16:00</span></p>
@@ -61,23 +35,26 @@
                 </li>
                 <li>
                     <img src="" alt="" width="100%" height="100%">
-=======
-                    <img src="" alt="">
->>>>>>> 893a47ca03336759bce7e412ea5560a65a01563c
+                    <h3>活动名称</h3>
+                    <p><em></em><span>2018年04月29日 14:00~16:00</span></p>
+                </li>
+                <li>
+                    <img src="" alt="" width="100%" height="100%">
+                    <h3>活动名称</h3>
+                    <p><em></em><span>2018年04月29日 14:00~16:00</span></p>
+                </li>
+                <li>
+                    <img src="" alt="" width="100%" height="100%">
                     <h3>活动名称</h3>
                     <p><em></em><span>2018年04月29日 14:00~16:00</span></p>
                 </li>
             </ul>
         </section>
     </article>
-<<<<<<< HEAD
     <script src="commonJs/rem.js"></script>
     <script src="commonJs/ajax.js"></script>
     <!-- <script src="commonJs/cors.js"></script> -->
+    <script src='commonJs/tap.js'></script>
     <script src="js/index.js"></script>
-=======
-<script src="common/rem.js"></script>
-<script src="main/index.js"></script>
->>>>>>> 893a47ca03336759bce7e412ea5560a65a01563c
 </body>
 </html>
