--- a/web/info.html
+++ b/web/info.html
@@ -15,6 +15,7 @@
             <h2>我的抢票信息</h2>
         </header>
         <section>
+            <p id="info">退订成功</p>
             <ul class="title">
                 <li class="tYes">已参加</li>
                 <li class="tNo">未参加</li>
