调用模块sea.js引入js模块

--- a/web/detail.html
+++ b/web/detail.html
@@ -61,7 +61,8 @@
         </div>
     </div>
     <script src="./commonJs/rem.js"></script>
-    <script src="./commonJs/ajax.js"></script>
+    <!-- <script src="./commonJs/ajax.js"></script> -->
+    <script src="commonJs/lib/sea.js"></script>
     <script src="./js/detail.js"></script>
     <script src="./commonJs/swiper-3.4.2.min.js"></script>
     <script>
