--- a/web/index.html
+++ b/web/index.html
@@ -52,9 +52,10 @@
         </section>
     </article>
     <script src="commonJs/rem.js"></script>
-    <script src="commonJs/ajax.js"></script>
+    <!-- <script src="commonJs/ajax.js"></script> -->
     <!-- <script src="commonJs/cors.js"></script> -->
     <script src='commonJs/tap.js'></script>
+    <script src="commonJs/lib/sea.js"></script>
     <script src="js/index.js"></script>
 </body>
 </html>
