--- a/web/info.html
+++ b/web/info.html
@@ -94,7 +94,8 @@
         </section>
     </article>
     <script src="./commonJs/rem.js"></script>
-    <script src="./commonJs/ajax.js"></script>
+    <!-- <script src="./commonJs/ajax.js"></script> -->
+    <script src="commonJs/lib/sea.js"></script>
     <script src="./js/info.js"></script>
 </body>
 </html>
