--- a/web/index.html
+++ b/web/index.html
@@ -16,6 +16,7 @@
             <h1>抢票APP</h1>
             <div class="personal-center"></div>
         </header>
+        <p id="fresh"></p>
         <section>
             <ul class="activities">
                 <li>
@@ -52,7 +53,7 @@
         </section>
     </article>
     <script src="commonJs/rem.js"></script>
-    <!-- <script src="commonJs/ajax.js"></script> -->
+    <script src="commonJs/ajax.js"></script>
     <!-- <script src="commonJs/cors.js"></script> -->
     <script src='commonJs/tap.js'></script>
     <script src="commonJs/lib/sea.js"></script>
