将上拉刷新改为加载更多

--- a/web/index.html
+++ b/web/index.html
@@ -50,6 +50,7 @@
                     <p><em></em><span>2018年04月29日 14:00~16:00</span></p>
                 </li>
             </ul>
+            <p id="addMore">点击加载更多</p>
         </section>
     </article>
     <script src="commonJs/rem.js"></script>
