--- a/web/index.html
+++ b/web/index.html
@@ -20,34 +20,46 @@
         <section>
             <ul class="activities">
                 <li>
-                    <img src="" alt="" width="100%" height="100%">
-                    <h3>活动名称</h3>
-                    <p><em></em><span>2018年04月29日 14:00~16:00</span></p>
+                    <a href="detail.html#">
+                        <img src="" alt="" width="100%" height="100%">
+                        <h3>活动名称</h3>
+                        <p><em></em><span>2018年04月29日 14:00~16:00</span></p>
+                    </a>
                 </li>
                 <li>
-                    <img src="" alt="" width="100%" height="100%">
-                    <h3>活动名称</h3>
-                    <p><em></em><span>2018年04月29日 14:00~16:00</span></p>
+                    <a href="detail.html#">
+                        <img src="" alt="" width="100%" height="100%">
+                        <h3>活动名称</h3>
+                        <p><em></em><span>2018年04月29日 14:00~16:00</span></p>
+                    </a>
                 </li>
                 <li>
-                    <img src="" alt="" width="100%" height="100%">
-                    <h3>活动名称</h3>
-                    <p><em></em><span>2018年04月29日 14:00~16:00</span></p>
+                    <a href="detail.html#">
+                        <img src="" alt="" width="100%" height="100%">
+                        <h3>活动名称</h3>
+                        <p><em></em><span>2018年04月29日 14:00~16:00</span></p>
+                    </a>
                 </li>
                 <li>
-                    <img src="" alt="" width="100%" height="100%">
-                    <h3>活动名称</h3>
-                    <p><em></em><span>2018年04月29日 14:00~16:00</span></p>
+                    <a href="detail.html#">
+                        <img src="" alt="" width="100%" height="100%">
+                        <h3>活动名称</h3>
+                        <p><em></em><span>2018年04月29日 14:00~16:00</span></p>
+                    </a>
                 </li>
                 <li>
-                    <img src="" alt="" width="100%" height="100%">
-                    <h3>活动名称</h3>
-                    <p><em></em><span>2018年04月29日 14:00~16:00</span></p>
+                    <a href="detail.html#">
+                        <img src="" alt="" width="100%" height="100%">
+                        <h3>活动名称</h3>
+                        <p><em></em><span>2018年04月29日 14:00~16:00</span></p>
+                    </a>
                 </li>
                 <li>
-                    <img src="" alt="" width="100%" height="100%">
-                    <h3>活动名称</h3>
-                    <p><em></em><span>2018年04月29日 14:00~16:00</span></p>
+                    <a href="detail.html#">
+                        <img src="" alt="" width="100%" height="100%">
+                        <h3>活动名称</h3>
+                        <p><em></em><span>2018年04月29日 14:00~16:00</span></p>
+                    </a>
                 </li>
             </ul>
             <p id="addMore">点击加载更多</p>
